# pyfunctype_mre

./: README.md  pyproject.toml  setup.py
src_c/: pyfunctype_mre.c
